feat: implement enough features for React SSR

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+	"files.exclude": {
+		"playground/**": true
+	},
 	"deno.enable": true,
 	"deno.unstable": true,
 	"deno.config": "./deno.json",
